feat: add input component with label and error handling

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,12 @@
   --color-danger: #b12c4d;
 
   --default-font-family: 'Open Sans', sans-serif;
+
+  --text-xs: 0.625rem;
+  --text-sm: 0.75rem;
+  --text-base: 0.875rem;
+  --text-lg: 1.25rem;
+  --text-xl: 1.5rem;
+
+  --border-1.5: 1.5px;
 }
